--- a/sample/SampleBlazorApp/SampleBlazorApp.Client/Pages/ClientSide.razor
+++ b/sample/SampleBlazorApp/SampleBlazorApp.Client/Pages/ClientSide.razor
@@ -4,9 +4,7 @@
 
 <PageTitle>Client Side</PageTitle>
 
-Client Side
-
-<button @onclick="Test">Sign In</button>
+<h3>Interactive WebAssembly (prerendering off)</h3>
 
 <AuthorizeView>
     <NotAuthorized>
