--- a/sample/SampleBlazorApp/SampleBlazorApp.Client/Pages/ClientSignIn.razor
+++ b/sample/SampleBlazorApp/SampleBlazorApp.Client/Pages/ClientSignIn.razor
@@ -17,6 +17,6 @@
 
         var result = await AuthenticationService.SignInAsync(payload);
 
-        // NavigationManager.NavigateTo("/", true);
+        NavigationManager.NavigateTo("/", true);
     }
 }
