--- a/sample/SampleBlazorApp/SampleBlazorApp.Client/RedirectToSignIn.razor
+++ b/sample/SampleBlazorApp/SampleBlazorApp.Client/RedirectToSignIn.razor
@@ -3,6 +3,6 @@
 @code {
     protected override void OnInitialized()
     {
-        NavigationManager.NavigateTo("/sign-in", true);
+        NavigationManager.NavigateTo("/client-sign-in", true);
     }
 }
