--- a/sample/SampleBlazorApp/SampleBlazorApp/Components/Layout/NavMenu.razor
+++ b/sample/SampleBlazorApp/SampleBlazorApp/Components/Layout/NavMenu.razor
@@ -19,8 +19,14 @@
         <AuthorizeView>
             <NotAuthorized>
                 <div class="nav-item px-3">
-                    <NavLink class="nav-link" href="sign-in">
-                        <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Sign In
+                    <NavLink class="nav-link" href="client-sign-in">
+                        <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Sign In (C)
+                    </NavLink>
+                </div>
+
+                <div class="nav-item px-3">
+                    <NavLink class="nav-link" href="server-sign-in">
+                        <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Sign In (S)
                     </NavLink>
                 </div>
             </NotAuthorized>
@@ -35,12 +41,6 @@
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="client">
                 <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Client
-            </NavLink>
-        </div>
-
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="client2">
-                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Client 2
             </NavLink>
         </div>
 
