--- a/sample/SampleBlazorApp/SampleBlazorApp.Client/Pages/AuthClientSide.razor
+++ b/sample/SampleBlazorApp/SampleBlazorApp.Client/Pages/AuthClientSide.razor
@@ -1,10 +1,13 @@
 ﻿@page "/auth-client"
+@rendermode @(new InteractiveWebAssemblyRenderMode(false))
 
-@rendermode InteractiveWebAssembly
+@using System.Text.Json
 
 <PageTitle>Auth Client Side</PageTitle>
 
 <RouteAuthorize />
+
+<h3>Interactive WebAssembly (prerendering off)</h3>
 
 <AuthorizeView>
     <NotAuthorized>
@@ -12,6 +15,8 @@
     </NotAuthorized>
     <Authorized>
         <h1>You are authenticated</h1>
-        @context.User.Identity?.IsAuthenticated
+        <pre>
+            @JsonSerializer.Serialize(@context.User.Claims.Select(x => new { x.Type, x.Value, x.Issuer, x.Subject?.Name, x.ValueType }), new JsonSerializerOptions { WriteIndented = true })
+        </pre>
     </Authorized>
 </AuthorizeView>
