--- a/sample/SampleBlazorApp/SampleBlazorApp.Client/Pages/ClientSignIn.razor
+++ b/sample/SampleBlazorApp/SampleBlazorApp.Client/Pages/ClientSignIn.razor
@@ -8,6 +8,8 @@
 
 <PageTitle>Sign In</PageTitle>
 
+<h3>Interactive WebAssembly (prerendering off)</h3>
+
 <button type="submit" class="w-100 btn btn-lg btn-primary" @onclick="SignInAsync">Sign In</button>
 
 @code {
