--- a/sample/SampleBlazorApp/SampleBlazorApp/Components/Layout/NavMenu.razor
+++ b/sample/SampleBlazorApp/SampleBlazorApp/Components/Layout/NavMenu.razor
@@ -29,6 +29,18 @@
                         <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Sign In (S)
                     </NavLink>
                 </div>
+
+                <div class="nav-item px-3">
+                    <NavLink class="nav-link" href="client-sign-up">
+                        <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Sign Up (C)
+                    </NavLink>
+                </div>
+
+                <div class="nav-item px-3">
+                    <NavLink class="nav-link" href="server-sign-up">
+                        <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Sign Up (S)
+                    </NavLink>
+                </div>
             </NotAuthorized>
         </AuthorizeView>
 
