--- a/sample/SampleBlazorApp/SampleBlazorApp.Client/Pages/ServerSignIn.razor
+++ b/sample/SampleBlazorApp/SampleBlazorApp.Client/Pages/ServerSignIn.razor
@@ -7,6 +7,8 @@
 
 <PageTitle>Sign In</PageTitle>
 
+<h3>Interactive Server (prerendering off)</h3>
+
 <button type="submit" class="w-100 btn btn-lg btn-primary" @onclick="SignInAsync">Sign In</button>
 
 @code {
