--- a/sample/SampleBlazorApp/SampleBlazorApp.Client/Components/Layout/MainLayout.razor
+++ b/sample/SampleBlazorApp/SampleBlazorApp.Client/Components/Layout/MainLayout.razor
@@ -7,7 +7,14 @@
 
     <main>
         <div class="top-row px-4">
-            <a href="https://learn.microsoft.com/aspnet/core/" target="_blank">About</a>
+            <AuthorizeView>
+                <NotAuthorized>
+                    You are not authenticated
+                </NotAuthorized>
+                <Authorized>
+                    You are authenticated
+                </Authorized>
+            </AuthorizeView>
         </div>
 
         <article class="content px-4">
