--- a/sample/SampleBlazorApp/SampleBlazorApp.Client/_Imports.razor
+++ b/sample/SampleBlazorApp/SampleBlazorApp.Client/_Imports.razor
@@ -3,11 +3,14 @@
 @using Microsoft.AspNetCore.Components.Forms
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.AspNetCore.Components.Web
-@using static Microsoft.AspNetCore.Components.Web.RenderMode
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
-@using SampleBlazorApp.Client
 @using Microsoft.AspNetCore.Authorization
 @using Microsoft.AspNetCore.Components.Authorization
 @using BitzArt.Blazor.Auth
-@using SampleBlazorApp.Services
+@using SampleBlazorApp
+@using SampleBlazorApp.Client
+@using SampleBlazorApp.Client.Components
+@using SampleBlazorApp.Client.Components.Layout
+
+@using static Microsoft.AspNetCore.Components.Web.RenderMode
