--- a/sample/SampleBlazorApp/SampleBlazorApp/Components/_Imports.razor
+++ b/sample/SampleBlazorApp/SampleBlazorApp/Components/_Imports.razor
@@ -4,13 +4,16 @@
 @using Microsoft.AspNetCore.Components.Forms
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.AspNetCore.Components.Web
-@using static Microsoft.AspNetCore.Components.Web.RenderMode
 @using Microsoft.AspNetCore.Components.Web.Virtualization
+@using Microsoft.AspNetCore.Authentication
+@using Microsoft.AspNetCore.Authorization
 @using Microsoft.JSInterop
+@using BitzArt.Blazor.Auth
+
 @using SampleBlazorApp
 @using SampleBlazorApp.Client
 @using SampleBlazorApp.Components
 @using SampleBlazorApp.Services
-@using Microsoft.AspNetCore.Authentication
-@using Microsoft.AspNetCore.Authorization
-@using BitzArt.Blazor.Auth
+@using SampleBlazorApp.Client.Components
+
+@using static Microsoft.AspNetCore.Components.Web.RenderMode
