--- a/sample/SampleBlazorApp/SampleBlazorApp.Client/Pages/PublicPage.razor
+++ b/sample/SampleBlazorApp/SampleBlazorApp.Client/Pages/PublicPage.razor
@@ -1,6 +1,6 @@
 ﻿@page "/public"
 @inherits PageBase
 
-<PageTitle>Publicly available page</PageTitle>
+<PageTitle>Public Page</PageTitle>
 
 <h1>Public Page</h1>
