Implement Sign-up (#2)
* Add sign-up functionality

* Refactor AuthenticationService

* Rename methods in IAuthenticationService

* Update sample

* Update sample

* Update AuthenticationResult

* Cleanup

* Cleanup

* Refactoring

* Cleanup

---------

Co-authored-by: Yuriy Durov <u.a.durov@gmail.com>

--- a/sample/SampleBlazorApp/SampleBlazorApp.Client/Pages/SignInPage.razor
+++ b/sample/SampleBlazorApp/SampleBlazorApp.Client/Pages/SignInPage.razor
@@ -1,12 +1,13 @@
-﻿@page "/client-sign-in"
-
-@rendermode @(new InteractiveWebAssemblyRenderMode(false))
+﻿@page "/sign-in"
+@inherits PageBase
 
 @inject HttpClient HttpClient
 @inject NavigationManager NavigationManager
-@inject IAuthenticationService AuthenticationService
+@inject IUserService UserService
 
 <PageTitle>Sign In</PageTitle>
+
+<h1>Sign In</h1>
 
 <button type="submit" class="w-100 btn btn-lg btn-primary" @onclick="SignInAsync">Sign In</button>
 
@@ -15,8 +16,8 @@
     {
         var payload = new SignInPayload();
 
-        var result = await AuthenticationService.SignInAsync(payload);
+        var result = await UserService.SignInAsync(payload);
 
-        // NavigationManager.NavigateTo("/", true);
+        NavigationManager.NavigateTo("/", true);
     }
 }
