Switch from LocalStorage to Cookies

--- a/sample/SampleBlazorApp/SampleBlazorApp/Components/App.razor
+++ b/sample/SampleBlazorApp/SampleBlazorApp/Components/App.razor
@@ -9,11 +9,11 @@
     <link rel="stylesheet" href="app.css" />
     <link rel="stylesheet" href="SampleBlazorApp.styles.css" />
     <link rel="icon" type="image/png" href="favicon.png" />
-    <HeadOutlet @rendermode="new InteractiveServerRenderMode(prerender: false)" />
+    <HeadOutlet />
 </head>
 
 <body>
-    <Routes @rendermode="new InteractiveServerRenderMode(prerender: false)" />
+    <Routes />
     <script src="_framework/blazor.web.js"></script>
 </body>
 
