--- a/sample/SampleBlazorApp/SampleBlazorApp.Client/Pages/HomePage.razor
+++ b/sample/SampleBlazorApp/SampleBlazorApp.Client/Pages/HomePage.razor
@@ -1,7 +1,6 @@
 ﻿@page "/"
-@inherits PageBase
 
-<PageTitle>Home</PageTitle>
+<PageTitle>Home Page | Blazor.Auth</PageTitle>
 
 <h2>Count: @count</h2>
 
