--- a/sample/SampleBlazorApp/SampleBlazorApp.Client/Components/Routes.razor
+++ b/sample/SampleBlazorApp/SampleBlazorApp.Client/Components/Routes.razor
@@ -2,7 +2,7 @@
     <Found Context="routeData">
         <AuthorizeRouteView RouteData="routeData" DefaultLayout="typeof(MainLayout)">
             <NotAuthorized>
-                <RedirectToSignIn />
+                <Redirect To="/auth" />
             </NotAuthorized>
         </AuthorizeRouteView>
         <FocusOnNavigate RouteData="routeData" Selector="h1" />
