--- a/sample/BitzArt.Blazor.Auth.SampleApp/BitzArt.Blazor.Auth.SampleApp.Shared/Pages/AuthRequiredPage.razor
+++ b/sample/BitzArt.Blazor.Auth.SampleApp/BitzArt.Blazor.Auth.SampleApp.Shared/Pages/AuthRequiredPage.razor
@@ -6,4 +6,4 @@
 
 <PageTitle>Auth Required Page | Blazor.Auth</PageTitle>
 
-Congrats, you are authorized to see this page!
+You are authorized to see this page!
