--- a/sample/BitzArt.Blazor.Auth.SampleApp/BitzArt.Blazor.Auth.SampleApp.Shared/Components/Routes.razor
+++ b/sample/BitzArt.Blazor.Auth.SampleApp/BitzArt.Blazor.Auth.SampleApp.Shared/Components/Routes.razor
@@ -1,6 +1,6 @@
 ﻿@namespace BitzArt.Blazor.Auth.SampleApp
 
-<Router AppAssembly="typeof(Client.Program).Assembly">
+<Router AppAssembly="@(this.GetType().Assembly)">
     <Found Context="routeData">
         <AuthorizeRouteView RouteData="routeData" DefaultLayout="typeof(MainLayout)">
             <NotAuthorized>
