--- a/sample/BitzArt.Blazor.Auth.SampleApp/BitzArt.Blazor.Auth.SampleApp.Shared/_Imports.razor
+++ b/sample/BitzArt.Blazor.Auth.SampleApp/BitzArt.Blazor.Auth.SampleApp.Shared/_Imports.razor
@@ -1,17 +1,19 @@
-﻿@namespace BitzArt.Blazor.Auth.SampleApp.Client
+﻿@namespace BitzArt.Blazor.Auth.SampleApp.Shared
 
 @using System.Net.Http
 @using System.Net.Http.Json
 @using System.Text.Json
 
+@using Microsoft.AspNetCore.Authorization
 @using Microsoft.AspNetCore.Components.Forms
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Components.Web.Virtualization
-@using Microsoft.JSInterop
-@using Microsoft.AspNetCore.Authorization
 @using Microsoft.AspNetCore.Components.Authorization
+@using Microsoft.JSInterop
 
 @using BitzArt.Blazor.Auth
+
+@using BitzArt.Blazor.Auth.SampleApp
 
 @using static Microsoft.AspNetCore.Components.Web.RenderMode
