--- a/sample/BitzArt.Blazor.Auth.SampleApp/BitzArt.Blazor.Auth.SampleApp.Shared/Pages/HomePage.razor
+++ b/sample/BitzArt.Blazor.Auth.SampleApp/BitzArt.Blazor.Auth.SampleApp.Shared/Pages/HomePage.razor
@@ -39,7 +39,7 @@
 @code
 {
     [Inject] NavigationManager NavigationManager { get; set; } = null!;
-    [Inject] IUserService UserService { get; set; } = null!;
+    [Inject] IUserService<SignInPayload> UserService { get; set; } = null!;
 
     private async Task SignInAsync()
     {
