--- a/sample/BitzArt.Blazor.Auth.SampleApp/BitzArt.Blazor.Auth.SampleApp.Shared/Pages/HomePage.razor
+++ b/sample/BitzArt.Blazor.Auth.SampleApp/BitzArt.Blazor.Auth.SampleApp.Shared/Pages/HomePage.razor
@@ -4,63 +4,10 @@
 
 <PageTitle>Home Page | Blazor.Auth</PageTitle>
 
-<h5 style="margin-bottom:2rem;">
-    Current renderer: @(RendererInfo.Name)
-</h5>
-
-<AuthorizeView>
-
-    <NotAuthorized>
-        <div>
-            <h4>
-                You are not authenticated.
-            </h4>
-
-            <div style="margin-top:2rem;">
-                <button type="submit" class="btn btn-lg btn-primary" @onclick="SignInAsync">Sign In</button>
-            </div>
-        </div>
-    </NotAuthorized>
-
-    <Authorized>
-        <div>
-            <h4>
-                You are authenticated.
-            </h4>
-
-            <div style="margin-top:2rem;">
-                <button type="submit" class="btn btn-lg btn-primary" @onclick="SignOutAsync">Sign Out</button>
-            </div>
-        </div>
-    </Authorized>
-
-</AuthorizeView>
-
-@code
-{
-    [Inject] NavigationManager NavigationManager { get; set; } = null!;
-    [Inject] IUserService<SignInPayload> UserService { get; set; } = null!;
-
-    private async Task SignInAsync()
-    {
-        // Simulating user input
-        var signInPayload = new SignInPayload("some data");
-
-        // Signing the user in
-        var authenticationResult = await UserService.SignInAsync(signInPayload);
-
-        // Refresh the page after signing in
-        // to let Blazor know that the user's authentication state has changed
-        NavigationManager.NavigateTo("/", true);
-    }
-
-    private async Task SignOutAsync()
-    {
-        // Signing the user out
-        await UserService.SignOutAsync();
-
-        // Refresh the page after signing out
-        // to let Blazor know that the user's authentication state has changed
-        NavigationManager.NavigateTo("/", true);
-    }
-}
+<div>
+    To see how <a href="https://github.com/BitzArt/Blazor.Auth">Blazor.Auth</a> behaves under different render modes,
+    navigate to the
+    <a href="/static">static page</a>,
+    <a href="interactive-server">interactive (server) page</a>,
+    and <a href="interactive-wasm">interactive (wasm) page</a>.
+</div>
