--- a/sample/BitzArt.Blazor.Auth.SampleApp/BitzArt.Blazor.Auth.SampleApp.Shared/Pages/Layout/NavMenu.razor
+++ b/sample/BitzArt.Blazor.Auth.SampleApp/BitzArt.Blazor.Auth.SampleApp.Shared/Pages/Layout/NavMenu.razor
@@ -16,6 +16,24 @@
             </NavLink>
         </div>
 
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="static">
+                <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Static
+            </NavLink>
+        </div>
+
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="interactive-server">
+                <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Interactive (server)
+            </NavLink>
+        </div>
+
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="interactive-wasm">
+                <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Interactive (wasm)
+            </NavLink>
+        </div>
+
         <AuthorizeView>
             <Authorized>
                 <div class="nav-item px-3">
