--- a/sample/BitzArt.Blazor.Auth.SampleApp/BitzArt.Blazor.Auth.SampleApp.Shared/Pages/Layout/NavMenu.razor
+++ b/sample/BitzArt.Blazor.Auth.SampleApp/BitzArt.Blazor.Auth.SampleApp.Shared/Pages/Layout/NavMenu.razor
@@ -18,19 +18,19 @@
 
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="static">
-                <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Static
+                <span class="bi bi-person-fill-nav-menu" aria-hidden="true"></span> Static
             </NavLink>
         </div>
 
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="interactive-server">
-                <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Interactive (server)
+                <span class="bi bi-person-fill-nav-menu" aria-hidden="true"></span> Interactive (server)
             </NavLink>
         </div>
 
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="interactive-wasm">
-                <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Interactive (wasm)
+                <span class="bi bi-person-fill-nav-menu" aria-hidden="true"></span> Interactive (wasm)
             </NavLink>
         </div>
 
@@ -38,7 +38,7 @@
             <Authorized>
                 <div class="nav-item px-3">
                     <NavLink class="nav-link" href="auth-required">
-                        <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Auth Required
+                        <span class="bi bi-unlock-fill-nav-menu" aria-hidden="true"></span> Auth Required
                     </NavLink>
                 </div>
             </Authorized>
